--- a/cover-letter/styles/globals.css
+++ b/cover-letter/styles/globals.css
@@ -154,7 +154,7 @@ body {
 /* footer */
 
 .footer {
-  background-color: #f2f2f2;
+  background-color: var(--color-secondary);
   padding: 10px;
   margin-top: 20px;
 }
@@ -162,6 +162,7 @@ body {
 .footer p {
   font-size: 0.8rem;
   margin-right: 2rem;
+  color: #051923;
 }
 
 /* projects */
