--- a/cover-letter/styles/globals.css
+++ b/cover-letter/styles/globals.css
@@ -49,10 +49,29 @@ body {
 }
 
 .main-grid {
-  display: block;
   width: 95%;
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+.about-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+}
+
+.bobbi {
+  padding-top: 60rem;
+  opacity: 0;
+  transition: opacity 3s ease;
+}
+
+.bobbi.visible {
+  opacity: 1;
+}
+
+.bobbi img {
+  object-fit: contain;
+  border-radius: 20px;
 }
 
 .main-card1 {
@@ -64,11 +83,12 @@ body {
   padding: 2rem;
   margin: 2rem;
   box-shadow: #2f5061 0px 0px 20px;
-  width: 60%;
-  background-image: linear-gradient(
+  width: 100%;
+  /* background-image: linear-gradient(
     var(--color-accent),
     var(--color-secondary-accent)
-  );
+  ); */
+  background-color: var(--color-secondary-accent);
 }
 
 .main-card2 {
@@ -82,11 +102,12 @@ body {
   box-shadow: #2f5061 0px 0px 20px;
   object-fit: contain;
   width: 60%;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     var(--color-secondary-accent),
     var(--color-secondary)
-  );
+  ); */
   margin-left: auto;
+  background-color: var(--color-secondary);
 }
 
 .why-grid {
@@ -138,7 +159,7 @@ body {
   margin: 2rem;
 }
 
-/* navbar */
+/*////////////////////////////////////////////// navbar /////////////////////////*/
 
 .navbar {
   display: flex;
@@ -198,7 +219,7 @@ body {
   color: var(--color-background);
 }
 
-/* header */
+/*///////////////////////////////// header ////////////////////////////// */
 
 .header {
   display: flex;
@@ -215,6 +236,19 @@ body {
   font-family: var(--font-family-primary);
   font-weight: var(--font-weight-tertiary);
   color: var(--color-primary);
+}
+
+@keyframes fill {
+  0% {
+    fill: transparent;
+  }
+  100% {
+    fill: black;
+  }
+}
+
+.animate-fill {
+  animation: fill 4s linear 1s forwards;
 }
 
 .header p {
@@ -239,7 +273,7 @@ body {
   border-radius: 5px;
 }
 
-/* about */
+/*////////////////////// about ///////////////////*/
 
 .about-container {
   display: flex;
@@ -247,6 +281,13 @@ body {
   justify-content: center;
   align-items: center;
   width: 85%;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+.about-container.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .about-headline {
@@ -267,6 +308,14 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.about-card.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .about-card h3 {
@@ -287,9 +336,18 @@ body {
 .about-wrapup {
   margin-top: 6.4rem;
   margin-bottom: 1.4rem;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
-/* projects */
+.about-wrapup.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/*//////////////////////////////// projects ////////////////////////////////////////*/
+
 .projects-container {
   display: flex;
   flex-direction: column;
@@ -366,7 +424,7 @@ body {
 .scroll-index button.inactive {
   background-color: #cccccc;
 }
-/* /////////////////// Company //////////////// */
+/* //////////////////////////////////// Company ///////////////////////////// */
 
 .company-container {
   display: flex;
@@ -410,7 +468,7 @@ body {
   font-weight: var(--font-weight-primary);
   color: var(--color-primary);
 }
-/*////////////////////////// WhyMe /////////////////////////// */
+/*////////////////////////////////////////// WhyMe ////////////////////////////////////// */
 
 .whyme-container {
   display: flex;
@@ -458,7 +516,7 @@ body {
   color: var(--color-primary);
 }
 
-/* skills */
+/*////////////////////////////// skills //////////////////////////////*/
 
 .skills-container {
   display: flex;
@@ -476,17 +534,32 @@ body {
   margin-bottom: 3rem;
 }
 
-.skills-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 4rem;
-  justify-items: center;
+.skills-container h3 {
+  margin-top: 1rem;
+  font-family: var(--font-family-primary);
+  font-weight: var(--font-weight-secondary);
+  color: var(--color-primary);
+  font-size: 1.5rem;
 }
-
 .skills-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1.4rem;
+  margin-bottom: 1.4rem;
 }
 
-/* references */
+.skill-icons {
+  display: flex;
+  grid-gap: 1rem;
+}
+
+.skill {
+  margin-top: 1rem;
+}
+
+/*///////////////////////////// references ///////////////////////////////*/
 
 .references-container {
   display: flex;
@@ -538,7 +611,8 @@ body {
   color: var(--color-primary);
 }
 
-/* socials */
+/*////////////////////////////////// socials */
+
 .socials {
   margin-top: 3.4rem;
   margin-bottom: 3.4rem;
