trying to get scroll position animation to work

--- a/cover-letter/styles/globals.css
+++ b/cover-letter/styles/globals.css
@@ -61,12 +61,12 @@ body {
 
 .bobbi {
   padding-top: 60rem;
-  opacity: 0;
-  transition: opacity 3s ease;
+  /* opacity: 0;
+  transition: opacity 1s ease; */
 }
 
 .bobbi.visible {
-  opacity: 1;
+  /* opacity: 1 !important; */
 }
 
 .bobbi img {
