--- a/cover-letter/styles/globals.css
+++ b/cover-letter/styles/globals.css
@@ -66,7 +66,7 @@ body {
   }
 }
 .about-grid {
-  display: grid;
+  display: flex;
   grid-template-columns: 1fr 1fr;
   grid-gap: 1rem;
 }
@@ -76,9 +76,18 @@ body {
     grid-template-columns: 1fr;
   }
 }
+.main-grid h1 {
+  text-decoration-color: var(--color-primary);
+  text-decoration-line: underline;
+}
+
+.header h1 {
+  text-decoration: none;
+}
 
 .bobbi {
-  padding-top: 60rem;
+  padding-top: 160vh;
+  z-index: 1;
   /* opacity: 0;
   transition: opacity 1s ease; */
 }
@@ -147,12 +156,14 @@ body {
   ); */
   margin-left: auto;
   background-color: var(--color-secondary);
+  height: auto;
 }
 
 .why-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: .5rem;
+  height: fit-content;
 }
 
 .main-card3 {
@@ -163,7 +174,7 @@ body {
   border-radius: 65px;
   padding: 2rem;
   margin: 2rem;
-  margin-bottom: 16rem;
+  height: fit-content;
   box-shadow: var(--color-secondary) 0px 0px 20px;
 }
 
@@ -171,6 +182,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: fit-content;
   align-items: center;
   border-radius: 65px;
   padding: 2rem;
@@ -369,7 +381,7 @@ body {
 }
 
 .about-content {
-  width: 70%;
+  width: 90%;
 }
 
 .about-card {
@@ -427,7 +439,8 @@ body {
   justify-content: center;
   align-items: center;
   z-index: 2;
-  height: auto;
+  max-height: 280vh;
+  height: fit-content;
   width: 90%;
 }
 
@@ -442,12 +455,14 @@ body {
   border: 2px solid rgb(80, 79, 98);
   border-radius: 10px;
   box-shadow: 0px 0px 12px rgb(80, 79, 98);
-  height: 100%;
-  width: 100%
+  /* height: 100%; */
+  width: 100%;
+  object-fit: cover;
 }
 
 .embla p {
   margin: 2rem;
+  font-size: 2vw;
 }
 
 .embla h1 {
@@ -460,7 +475,7 @@ body {
 
 .embla__container img {
   width: 100%;
-  height: auto;
+  /* height: auto; */
   object-position: center;
   border-radius: 10px;
   z-index: 1;
@@ -493,13 +508,13 @@ body {
 }
 
 .embla__slide h1 {
-  margin-top: 1.4rem;
+  margin-top: 1.4vw;
 }
 
 .embla__slide p {
   font-family: var(--font-family-primary);
   margin-top: 1.0rem;
-  font-size: 1.2rem;
+  font-size: 1.4vw;
 }
 
 .scroll-index {
@@ -887,15 +902,15 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 24px;
-  height: 20px;
+  width: 2.2vw;
+  height: 3vh;
   cursor: pointer;
   margin-right: auto;
 }
 
 .hamburger-menu .line {
   width: 100%;
-  height: 2px;
+  height: .3vh;
   background-color: #000;
   transition: all 0.3s ease;
 }
@@ -929,7 +944,7 @@ body {
 }
 
 .menu-list {
-  position: absolute;
+  position: relative;
   right: 0;
   background-color: rgba(249, 249, 249, 0.8);
   padding: 8px;
@@ -937,8 +952,10 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
   overflow: hidden;
+  height: fit-content;
+  ;
 }
 
 .menu-list li {
@@ -948,7 +965,7 @@ body {
 .menu-list a {
   color: #000;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 1.5vw;
 }
 
 /* Media Queries */
@@ -967,11 +984,11 @@ body {
     display: flex;
     list-style: none;
     order: 2;
-    margin-left: auto; /* Added to align the menu items to the right */
+    margin-left: auto; 
   }
 
   ul li {
-    margin-right: 16px; /* Adjusted to margin-right instead of margin-left */
+    margin-right: 16px; 
   }
 
   ul li:last-child {
