--- a/cover-letter/styles/globals.css
+++ b/cover-letter/styles/globals.css
@@ -53,10 +53,10 @@ body {
     padding-top: 120px;
   }
 }
+
 .main-grid {
   width: 95%;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-top: 1rem;
 }
 
 @media (max-width: 768px) {
@@ -86,7 +86,7 @@ body {
 }
 
 .bobbi {
-  padding-top: 160vh;
+  padding-top: 60vh;
   z-index: 1;
   /* opacity: 0;
   transition: opacity 1s ease; */
@@ -99,6 +99,7 @@ body {
 .bobbi img {
   object-fit: contain;
   border-radius: 20px;
+  position: relative;
 }
 
 @media (max-width: 768px) {
@@ -137,6 +138,8 @@ body {
     var(--color-secondary-accent)
   ); */
   background-color: var(--color-secondary-accent);
+  height: fit-content;
+  position: relative;
 }
 
 .main-card2 {
@@ -156,7 +159,7 @@ body {
   ); */
   margin-left: auto;
   background-color: var(--color-secondary);
-  height: auto;
+  height: fit-content;
 }
 
 .why-grid {
@@ -310,7 +313,7 @@ body {
   align-items: center;
   background-color: var(--color-background);
   padding: 15px;
-  margin-bottom: 160px;
+  margin-bottom: 100px;
 }
 
 .header h1 {
@@ -363,7 +366,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 85%;
+  width: 80%;
   opacity: 0;
   transform: translateY(50px);
   transition: opacity 1s ease, transform 1s ease;
@@ -371,6 +374,7 @@ body {
 .about-container.visible {
   opacity: 1;
   transform: translateY(0);
+  height: fit-content;
 }
 
 .about-headline {
@@ -380,9 +384,6 @@ body {
   font-size: var(--font-size-quaternary);
 }
 
-.about-content {
-  width: 90%;
-}
 
 .about-card {
   margin-top: 1.4rem;
@@ -419,7 +420,7 @@ body {
 
 .about-wrapup {
   font-family: var(--font-family-secondary);
-  margin-top: 4rem;
+  margin-top: 4vh;
   margin-bottom: 1.4rem;
   opacity: 0;
   transform: translateY(50px);
@@ -440,7 +441,6 @@ body {
   align-items: center;
   z-index: 2;
   max-height: 280vh;
-  height: fit-content;
   width: 90%;
 }
 
@@ -471,6 +471,7 @@ body {
 
 .embla__container {
   display: flex;
+  height: fit-content
 }
 
 .embla__container img {
@@ -505,6 +506,8 @@ body {
 .embla__slide {
   flex: 0 0 100%;
   min-width: 0;
+  height: auto;
+  position: relative;
 }
 
 .embla__slide h1 {
