--- a/cover-letter/styles/globals.css
+++ b/cover-letter/styles/globals.css
@@ -152,14 +152,14 @@ body {
   margin: 2rem;
   box-shadow: #2f5061 0px 0px 20px;
   object-fit: contain;
-  width: 60%;
+  width: 70%;
   /* background-image: linear-gradient(
     var(--color-secondary-accent),
     var(--color-secondary)
   ); */
   margin-left: auto;
   background-color: var(--color-secondary);
-  height: fit-content;
+  height: auto;
 }
 
 .why-grid {
@@ -461,8 +461,7 @@ body {
 }
 
 .embla p {
-  margin: 2rem;
-  font-size: 2vw;
+  margin: 1rem;
 }
 
 .embla h1 {
@@ -476,7 +475,7 @@ body {
 
 .embla__container img {
   width: 100%;
-  /* height: auto; */
+  height: fit-content;
   object-position: center;
   border-radius: 10px;
   z-index: 1;
@@ -484,7 +483,7 @@ body {
 
 /* @media (max-width: 768px) {
   .embla__container img {
-    width: 80%;
+    width: 100%;
     height: auto;
   }
 }
@@ -517,7 +516,7 @@ body {
 .embla__slide p {
   font-family: var(--font-family-primary);
   margin-top: 1.0rem;
-  font-size: 1.4vw;
+  font-size: 1.2rem;
 }
 
 .scroll-index {
@@ -787,9 +786,19 @@ body {
   margin-bottom: 1.4rem;
 }
 
-.skill-icons {
+.skill-icons1, .skill-icons2, .skill-icons4 {
   display: flex;
+  justify-content: center;
+  align-items: center;
   grid-gap: 1rem;
+}
+
+.skill-icons3 {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-gap: 1rem;
+  grid: repeat(2, 1fr) / repeat(6, 1fr);
 }
 
 .skill {
